--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1 class="text-center mt-3">Scientific Calculator</h1>
         <div class="row">
-            <div class="offset-3 col-6">
+            <div class="col-12 offset-md-3 col-md-6">
                 <div class="card">
                     <div class="card-body">
                         <input
@@ -23,6 +23,18 @@
                             type="text"
                             aria-label=".form-control-lg example"
                         >
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    {
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    }
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
