--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,96 @@
                                     }
                                 </button>
                             </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    %
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    AC
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    7
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    8
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    9
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    ÷
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    4
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    5
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    6
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    ×
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    1
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    2
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    3
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    -
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    0
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    .
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">
+                                    =
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    +
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -42,6 +132,28 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    console.log("Document is ready");
+    const display = document.getElementById('calc-display');
+    const buttons = document.getElementsByClassName('btn');
+
+    let currentValue = "";
+
+    for (let i = 0; i < buttons.length; i++) {
+        const button = buttons[i];
+        button.addEventListener('click', function() {
+            const value = button.innerText;
+            currentValue += value;
+            display.value = currentValue;
+        })
+        
+    }
+
+
+});
+</script>
 
 </body>
 
